--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,157 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>AirBnB clone</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-          crossorigin="anonymous">
-    <link rel="icon" href="images/icon.png">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB clone</title>
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
+        <link rel="stylesheet" href="styles/8-places.css">
+        <link rel="shortcut icon" href="images/icon.png">
 
-  <body>
-    <header></header>
-
-    <div class="container">
-      <section class="filters">
-        <div class="locations">
-          <h3>States</h3>
-          <h4>ie. New York/Virgina...</h4>
-          <div class="popover">
-            <h2>New York:</h2>
-            <ul>
-              <li>Buffalo</li>
-              <li>New York City</li>
-            </ul>
-            <h2>Virginia:</h2>
-            <ul>
-              <li>Charlottesville</li>
-              <li>Richmond</li>
-            </ul>
-          </div>
-
-        </div><div class="amenities">
-          <h3>Amenities</h3>
-          <h4>ie. Laundry/Internet...</h4>
-          <ul class="popover">
-            <li>Internet</li>
-            <li>TV</li>
-            <li>Kitchen</li>
-            <li>Iron</li>
-          </ul>
+    </head>
+    <body>
+        <header>
+            <div class="logo"></div>
+        </header>
+        <div class="container">
+            <section class="filters">
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>California, Arizona...</h4>
+                    <ul class="popover">
+                        <li>
+                            <h2>Arizona:</h2>
+                        </li>
+                        <li>
+                            <ul>
+                                <li>page 1</li>
+                                <li>page 2</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h2>California:</h2>
+                        </li>
+                        <li>
+                            <ul>
+                                <li>San Francisco</li>
+                                <li>Los Altos</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Internet, Kitchen...</h4>
+                    <ul class="popover">
+                        <li>Internet</li>
+                        <li>Kitchen</li>
+                        <li>Smart TV</li>
+                        <li>Pool</li>
+                    </ul>
+                </div>
+                <button>Search</button>
+            </section>
+            <section class="places">
+                <h1>Places</h1>
+                <article>
+                    <h2>My home</h2>
+                    <div class="price_by_night">
+                        <p>$80</p>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <p>2 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <p>1 bedroom</p>
+                        </div>
+                        <div class="number_bathrooms">
+                            <p>1 Bathroom</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <b>Owner:</b> Luka Couffaine
+                    </div>
+                    <div class="description">
+                        <p>
+                            This is a lovely 1 bedroom and 1 Bathroom 
+                            apartment that can accommodate 2 people. 
+                            It locates at the center of Shanghai and 
+                            next to subway line 1, stop to People Square, 
+                            2 stops to Bund, 3 stops to Jingan Temple.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <h2>Tiny home</h2>
+                    <div class="price_by_night">
+                        <p>$65</p>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <p>4 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <p>2 bedrooms</p>
+                        </div>
+                        <div class="number_bathrooms">
+                            <p>1 Bathroom</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <b>Owner:</b> Adrien Agreste
+                    </div>
+                    <div class="description">
+                        <p>
+                            Enjoy the simplicity of this quiet and central 
+                            accommodation. Located on the second floor, 
+                            in the historic center 500 meters from the 
+                            Plaza de Armas, walking they arrive in 6 
+                            minutes, it has two double beds, two 
+                            bedrooms, a bathroom, a completely independent 
+                            kitchen-dining room environment.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <h2>A suite</h2>
+                    <div class="price_by_night">
+                        <p>$180</p>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <p>6 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <p>3 bedrooms</p>
+                        </div>
+                        <div class="number_bathrooms">
+                            <p>3 Bathrooms</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <b>Owner:</b> Marinette Dupain-Cheng
+                    </div>
+                    <div class="description">
+                        <p>
+                            Castel Saba is located in Spain, on the 
+                            Costa Blanca, slightly south of Alicante. 
+                            The place is very quiet, close to the sea 
+                            and the countryside. The property is surrounded 
+                            by a pine forest: the house dominates cultures 
+                            of fruit trees, especially oranges and 
+                            lemons and also the natural reserve of the 
+                            region, the Rio Seco.
+                        </p>
+                    </div>
+                </article>
+            </section>
         </div>
-        <button>Search</button>
-      </section>
-
-      <section class="places">
-        <h1>Places</h1>
-        <article>
-          <div class="name_and_price">
-            <h2>My home</h2>
-            <div class="price_by_night">&#36;80</div>
-          </div>
-          <div class="information">
-            <div class="max_guest">
-              <i class="fa fa-users fa-3x" aria-hidden="true"></i>
-              <br>2 Guests
-            </div>
-            <div class="number_rooms">
-              <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
-              <br>1 Room
-            </div>
-            <div class="number_bathrooms">
-              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
-              <br>0 Bathrooms
-            </div>
-          </div>
-          <div class="user">
-            <strong>Owner:</strong> My 4-year-old son
-          </div>
-          <div class="description">
-            Cramped yet...(cute? pre-school-ey? nvm.), one-bedroom pillow fort
-            constructed by my, er, creative, 4-year-old son. Features hand-me-down
-            blanket beds. Being a pillow fort, it has no electricy, plumbing,
-            internet, or essentially any amenities whatsoever. But, at least
-            it has a nice aroma of dino chicken nuggets? Hey, it's cheap!!
-          </div>
-        </article>
-
-        <article>
-          <div class="name_and_price">
-            <h2>Tiny house</h2>
-            <div class="price_by_night">&#36;65</div>
-          </div>
-          <div class="information">
-            <div class="max_guest">
-              <i class="fa fa-users fa-3x" aria-hidden="true"></i>
-              <br>1 Guest
-            </div>
-            <div class="number_rooms">
-              <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
-              <br>1 Room
-            </div>
-            <div class="number_bathrooms">
-              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
-              <br>2 Bathrooms
-            </div>
-          </div>
-          <div class="user"><strong>Owner:</strong> Theta Beta Bois</div>
-          <div class="description">
-            So, we've got this old couch that's currently going unused in our
-            frat house (Theta Beta Bois boiiiii!) We know trying to find school
-            housing sucks, right? So, like, we thought, you know what would be
-            a good idea? We should offer our couch for a student in need! Join
-            us bro, we're the chillest bros around, and you know we throw the
-            littest Friday night bangers!
-          </div>
-        </article>
-
-        <article>
-          <div class="name_and_price">
-            <h2>A Suite</h2>
-            <div class="price_by_night">&#36;190</div>
-          </div>
-          <div class="information">
-            <div class="max_guest">
-              <i class="fa fa-users fa-3x" aria-hidden="true"></i>
-              <br>1 Guest
-            </div>
-            <div class="number_rooms">
-              <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
-              <br>4 Rooms
-            </div>
-            <div class="number_bathrooms">
-              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
-              <br>1 Bathrooms
-            </div>
-          </div>
-          <div class="user">
-            <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
-          </div>
-          <div class="description">
-            Hi there. You're reading this right now, yes? I can sense it. Now,
-            are you my soul mate? If so, I await you. Yes, you, you fellow
-            spiritualist. You, who dedicates each morning carefully tending your
-            backyard grove of avocado trees. You, who cannot spend one day away
-            from the presence of your family of 17 alpacas. You know who you
-            are. Unite with me. Unite with my spirit. I have two boiled eggs
-            waiting for you.
-          </div>
-        </article>
-
-
-      </section>
-    </div>
-
-    <footer>
-      Best School
-    </footer>
-  </body>
+        <footer>
+            <p>Best School</p>
+        </footer>
+    </body>
 </html>
